tests/regression/pr27/pb.expected
File "tests/regression/pr27/pb.smt2", line 4, character 16-57:
4 |                 (= (notindomain i) (or (< i 0) (< 5 i)) )))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error The term: `(i < 0) ∨ (5 < i)` has type `Prop`
      but was expected to be of type `int`
